Bug 470607 - When using Wobbly Windows on Plasma 6 Wayland with 200% scale, windows blur/de-scale when dragged
Summary: When using Wobbly Windows on Plasma 6 Wayland with 200% scale, windows blur/d...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6, regression, wayland-only
Depends on:
Blocks:
 
Reported: 2023-06-03 20:23 UTC by Nate Graham
Modified: 2023-06-12 16:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-03 20:23:12 UTC
STEPS TO REPRODUCE
1. Use Plasma 6 Wayland session
2. Turn on scaling; I use 200%
3. Turn on Wobbly Windows effect
4. Drag a window, or even just click and hold and don't move it anywhere

OBSERVED RESULT
The window contents stop being rendered at 200% scale while dragged; instead it visibly blurs or pixelates

EXPECTED RESULT
Window contents remain drawn at high DPI while being dragged

ADDITIONAL INFORMATION
- Did not happen in the Plasma 6 Wayland session
- Does not happen in the Plasma 6 X11 session
Comment 1 Vlad Zahorodnii 2023-06-12 16:33:08 UTC
Git commit b9da04bf455a421e3abd32432d96835c86cc4ba2 by Vlad Zahorodnii.
Committed on 12/06/2023 at 16:09.
Pushed by vladz into branch 'master'.

libkwineffects: Make OffscreenEffect render window with its output's scale

Render the window at its output's scale to make the window less blurry.

M  +5    -6    src/libkwineffects/kwinoffscreeneffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/b9da04bf455a421e3abd32432d96835c86cc4ba2