libkwineffects: Make OffscreenEffect render window with its output's scale

Render the window at its output's scale to make the window less blurry.

BUG: 470607